--- a/index.html
+++ b/index.html
@@ -2,31 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Morphing GLSL Shader</title>
+    <title>Morphing GLSL Shader Landing</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
-    <!-- <script src="./raidyshady.js" type="module"></script> -->
     <script src="./main.js" type="module"></script>
   </head>
+
   <body>
     
     <header>
       
       <nav>
-        <div class="logo">asd</div>
+
+        <div class="logo">
+          <img src="./Atlantic-colored.svg" alt="">
+        </div>
 
         <ul>
           <li>Home</li>
           <li>About</li>
           <li>Contact</li>
           <li>Business</li>
-          <li>Cringe</li>
+          <li>Customers</li>
+          <li>Get a quote</li>
         </ul>
 
-        <div class="stuff">
-          asd asd asd
+        <div class="">
+          <a href="" class="btn gradient-button">Get a quote</a>
         </div>
 
       </nav>
@@ -38,37 +42,41 @@
       <!-- split up to 6 sections by industry -->
       <!-- just generate them with JS instead of applying 65 data attrs.  -->
       <div class="effects-container">
-        <div class="effect" data-effect="0" data-color-test="#e226b9" data-description-test="Probably not like this."><h4>Finance</h4></div>
-        <div class="effect" data-effect="1" data-color-test="#e447c2" data-description-test="but"><h4>Consulting</h4></div>
-        <div class="effect" data-effect="2" data-color-test="#d247e4" data-description-test="a test"><h4>IT</h4></div>
-        <div class="effect" data-effect="3" data-color-test="#dd6fec" data-description-test="was"><h4>Logistics</h4></div>
-        <div class="effect" data-effect="4" data-color-test="#8a39e7" data-description-test="done"><h4>Manufacturing</h4></div>
-        <div class="effect" data-effect="5" data-color-test="#a863f7" data-description-test="tonight"><h4>Goverments</h4></div>
+        <div class="effect" data-effect="0" data-color-test="#e226b9" data-description-test="Finance."><h4>Finance.</h4><p>This is a long text describing the feature of whatever, Lorem ipsum dolor sit on this yo, what is this typing all day like a crazy person instead of copy pasting some cool text from AI.</p><a class="btn">Case studies -></a></div>
+        <div class="effect" data-effect="1" data-color-test="#e447c2" data-description-test="Consulting."><h4>Consulting.</h4><p>This is a long text describing the feature of whatever, Lorem ipsum dolor sit on this yo, what is this typing all day like a crazy person instead of copy pasting some cool text from AI.</p></div>
+        <div class="effect" data-effect="2" data-color-test="#d247e4" data-description-test="IT." ><h4>IT.</h4><p>This is a long text describing the feature of whatever, Lorem ipsum dolor sit on this yo, what is this typing all day like a crazy person instead of copy pasting some cool text from AI.</p></div>
+        <div class="effect" data-effect="3" data-color-test="#dd6fec" data-description-test="Logistics."><h4>Logistics.</h4><p>This is a long text describing the feature of whatever, Lorem ipsum dolor sit on this yo, what is this typing all day like a crazy person instead of copy pasting some cool text from AI.</p></div>
+        <div class="effect" data-effect="4" data-color-test="#8a39e7" data-description-test="Manufacturing."><h4>Manufacturing.</h4><p>This is a long text describing the feature of whatever, Lorem ipsum dolor sit on this yo, what is this typing all day like a crazy person instead of copy pasting some cool text from AI.</p></div>
+        <div class="effect" data-effect="5" data-color-test="#a863f7" data-description-test="Goverments."><h4>Goverments.</h4><p>This is a long text describing the feature of whatever, Lorem ipsum dolor sit on this yo, what is this typing all day like a crazy person instead of copy pasting some cool text from AI.</p></div>
       </div>
 
       <section class="hero">        
 
         <div class="hero-container">
 
-          <h2>Transforming <br>
-            Businesses <br>
-            Like never Before
-          </h2>
+          <div class="cta-text">
+            <h2>Transforming <br>
+              Businesses like <div class="hover-info-container"><h3>&nbsp;</h3></div><br>
+              <!-- Businesses like <div class="hover-info-container"><h3>Consulting.</h3></div><br> -->
+              never before.
+            </h2>
+            <h3 >
+              <!-- generate with js. -->
+            </h3>
+          </div>
 
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br> Totam dignissimos illum maiores ducimus nobis consectetur.
+            We are making the world a better place,<br> and enabling businesses to scale endlessly.
           </p>
 
-          <div>
+          <div class="btn-container">
             <a href="" class="btn">Learn more</a>
-            <a href="" class="btn">Contact sales</a>
+            <a href="" class="btn gradient-button">Contact sales</a>
           </div>
 
         </div>
 
-        <h3 class="hover-info-container">
-          <!-- generate with js. -->
-        </h3>
+
 
       </section>
 
